welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: '=' expected but ')' found.
def avancex5) {
            ^MethodsPicture:66: error: illegal start of simple expression
}
^